added some styling to .scss file

--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -8,5 +8,5 @@
     <p>--Your Coach</p>
   </div>
   <div>
-    <%= link_to 'Ask a new question', ask_path %>
+    <%= link_to 'Ask a new question!', ask_path %>
   </div>
